<resources>
    <string name="app_name">Dungeon Crawl Stone Soup ASCII</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu">Menu</string>
    <string name="menu_help">Help</string>
    <string name="menu_change_keyboard_transparency">Change keyboard alpha</string>
    <string name="menu_quit">Save &amp; Quit</string>
    <string name="menu_show_hide_keyboard">Show/Hide Keyboard</string>
    <string name="install_dialog_title">Installing Dungeon Crawl: Stone Soup %1$s</string>
    <string name="updating_dialog_title">Updating Dungeon Crawl: Stone Soup to %1$s</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_dialog_message">Pressing \"Install\" will install the latest version of Dungeon Crawl. If you have any saved characters currently running, they may not be compatible with this version.\nYou can download an older version of the app if you wish to continue playing with your older characters. Press \"Download older version\" to download an older version from the project website (this release is %s, so try one before that). Otherwise, just press \"Install\" to continue installing the latest version.\nIf you mess everything up, you can still backup the saves directory from the preference screen.</string>
    <string name="warning_dialog_positive_button">Install</string>
    <string name="warning_dialog_neutral_button">Download old version</string>
    <string name="warning_dialog_negative_button">Cancel</string>
    <string name="copy_text">Copy text</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="morgue">Morgue</string>
    <string name="save_files">Save Files</string>
    <string name="about_category">About</string>
    <string name="splash_version_label">v%1$d (%2$s)</string>
    <string name="preferences_changelog_title">Changelog</string>
    <string name="preferences_changelog_summary">See what\'s new in each release.</string>
    <string name="preferences_changelog_title_versioned">Changelog: v%1$d (%2$s)</string>
    <string name="preferences_info_title">Info</string>
    <string name="preferences_info_summary">How do I work this?</string>
    <string name="preferences_settingsbutton_title">Show settings button</string>
    <string name="preferences_settingsbutton_summary">In-game app preferences button (this menu).</string>
    <string name="settingsbutton_disabled_message">Use two-finger long press to reach this menu in the future.</string>
    <string name="preferences_help_summary">Show the control keys.</string>
    <string name="backup_save_directory">Backup save directory</string>
    <string name="backup_morgue_directory">Backup morgue directory</string>
    <string name="restore_save_directory">Restore save directory</string>
    <string name="restore_morgue_directory">Restore morgue directory</string>
    <string name="copying_files">Copying files...</string>
    <string name="files_copied_successfully">Files copied successfully</string>
    <string name="error_copying_files">Error copying files</string>
    <string name="error_nothing_to_backup">Nothing to back up</string>
    <string name="error_backup_empty_or_invalid">Backup file is empty or invalid</string>
    <string name="save_restored_restart_title">Save restored</string>
    <string name="save_restored_restart_message">The app will now restart and load the restored save.</string>
    <string name="close_app">Restart app</string>
    <string name="saves_backup_filename">crawl-saves-backup.zip</string>
    <string name="morgue_backup_filename">crawl-morgue-backup.zip</string>
    <string name="backup_config_files">Backup config files</string>
    <string name="restore_config_files">Restore config files</string>
    <string name="config_backup_filename">crawl-config-backup.zip</string>
    <string name="custom_folder_category">Custom Data Folder</string>
    <string name="custom_folder_pick">Choose custom folder…</string>
    <string name="custom_folder_pick_summary">Pick a custom game data folder location. Default game data folder will not be used while this is set.</string>
    <string name="custom_folder_active_summary">Currently using: %s</string>
    <string name="custom_folder_disable">Disable custom folder</string>
    <string name="custom_folder_disable_summary">Stop using the custom folder and revert to default game data.</string>
    <string name="custom_folder_min_sdk_note">Requires Android 11 or newer.</string>
    <string name="custom_folder_unreachable_title">Custom folder unavailable</string>
    <string name="custom_folder_unreachable_message">The chosen custom data folder is no longer available. Disable the custom folder to continue with default data, or choose a new folder in Preferences.</string>
    <string name="custom_folder_disable_button">Disable custom folder</string>
    <string name="custom_folder_pulling">Syncing from custom folder…</string>
    <string name="custom_folder_seeding">Setting up custom folder…</string>
    <string name="custom_folder_set_restart_title">Custom folder set</string>
    <string name="custom_folder_set_restart_message">The app will now restart with the custom data folder.</string>
    <string name="custom_folder_cleared_restart_title">Custom folder disabled</string>
    <string name="custom_folder_cleared_restart_message">The app will now restart with the default data folder.</string>
    <string name="custom_folder_pick_failed">Couldn\'t take permission for that folder.</string>
    <string name="custom_folder_seed_failed">Couldn\'t copy current data into the custom folder.</string>
    <string name="unavailable_in_custom_mode_title">Not available with custom folders.</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Enable or disable vibration in game.</string>
    <string name="preferences_fullscreen_title">Full screen</string>
    <string name="preferences_fullscreen_summary">Enable or disable game in full screen.</string>
    <string name="preferences_skipsplash_title">Skip splash screen</string>
    <string name="preferences_skipsplash_summary">Skip the splash screen on startup.</string>
    <string name="preferences_skipcontrolsinfo_title">Skip startup help screens</string>
    <string name="preferences_skipcontrolsinfo_summary">Skip the controls info screens on startup.</string>
    <string name="preferences_wordwrap_title">Word wrap</string>
    <string name="preferences_wordwrap_summary">Wrap most texts at screen edge. Restarts app.</string>
    <string name="preferences_compacthud_title">Compact UI Mode</string>
    <string name="preferences_compacthud_summary">Advanced compact UI to maximize map panel size.</string>
    <string name="preferences_compactbarside_title">"    HP/MP vertical bars side"</string>
    <string name="preferences_compactbarside_dialogtitle">HP/MP vertical bars side</string>
    <string name="preferences_compactbarside_summary">"      %s"</string>
    <string name="preferences_msgrows_title"># of Message panel rows</string>
    <string name="preferences_msgrows_summary">%s. Uses free space above map first, then scales font.</string>
    <string name="preferences_msgrows_dialogtitle"># of Message panel rows</string>
    <string name="preferences_mlistrows_title"># of Monster list rows</string>
    <string name="preferences_mlistrows_summary">%s. Uses free space above map first, then scales font.</string>
    <string name="preferences_mlistrows_dialogtitle"># of Monster list rows</string>
    <string name="preferences_scalepriority_title">Scale: Monster list priority</string>
    <string name="preferences_scalepriority_summary">Choose which scales first, messages or monsters list.</string>
    <string name="preferences_scalepriority_dialogtitle">Which scales first</string>
    <string name="preferences_listsfontsize_title">Font size: Lists</string>
    <string name="preferences_descfontsize_title">Font size: Descriptions</string>
    <string name="font_size_slider_default">Default</string>
    <string name="font_size_slider_format">%+d pt</string>
    <string name="preferences_newturnmark_title">New turn indicator</string>
    <string name="preferences_newturnmark_summary">Show turn markers in the message log. Restarts app.</string>
    <string name="preferences_bevelmargin_title">Edge margin</string>
    <string name="preferences_bevelmargin_summary">Margin adjustment (from screen edges). Reopen the game to apply.</string>
    <string name="preferences_orientation_title">Orientation</string>
    <string name="preferences_orientation_summary">Select screen orientation.</string>
    <string name="preferences_fontface_title">Font</string>
    <string name="preferences_fontface_summary">Hi-res devices only.</string>
    <string name="preferences_reposition_ui_title">Reposition In-Game UI Panels</string>
    <string name="preferences_reposition_ui_summary">Reorder the game panels by dragging them.</string>
    <string name="preferences_reposition_ui_disabled_summary">Only available while a game is in progress.</string>
    <string name="unfolded_category">Folding Devices</string>
    <string name="preferences_unfolded_title">Unfolded mode</string>
    <string name="preferences_unfolded_summary">Use unfolded screen instead of single-screen.</string>
    <string name="preferences_unfoldedkeyboardside_title">Keyboard side</string>
    <string name="preferences_unfoldedkeyboardside_summary">On-screen keyboard placement.</string>
    <string name="preferences_reposition_centerline_title">Reposition Fold Centerline</string>
    <string name="preferences_reposition_centerline_summary">Drag the split line to resize the two halves.</string>
    <string name="reposition_save">Save</string>
    <string name="reposition_reset">Reset</string>
    <string name="reposition_cancel">Exit</string>
    <string name="reposition_float_on">Float: On</string>
    <string name="reposition_float_off">Float: Off</string>
    <string name="reposition_fill_on">Fill: On</string>
    <string name="reposition_fill_off">Fill: Off</string>
    <string name="reposition_opacity">Line: %1$d%%</string>
    <string name="reposition_fill_opacity">Fill: %1$d%%</string>
    <string name="reposition_theme">Themes</string>
    <string name="reposition_color">Line color</string>
    <string name="reposition_fill_color">Fill color</string>
    <string name="reposition_arrows">Arrows</string>
    <string name="reposition_color_default">Default</string>
    <string name="reposition_panel_map">Map</string>
    <string name="reposition_panel_hud">HUD</string>
    <string name="reposition_panel_mlist">Enemies</string>
    <string name="reposition_panel_msg">Messages</string>
    <string name="preferences_reposition_grid_title">Customize Grid Overlay</string>
    <string name="preferences_reposition_grid_summary">Drag the grid lines to reshape the touch direction zones.</string>
    <string name="preferences_gameplugin_title">Selected variant</string>
    <string name="preferences_gameplugin_summary">Note that these Game settings stick to the active profile.</string>
    <string name="preferences_enablevkey_title">Enable virtual keyboard</string>
    <string name="preferences_enablevkey_summary">Display virtual keyboard.</string>
    <string name="preferences_portraitkb_title">Portrait keyboard</string>
    <string name="preferences_portraitkb_summary">Choose which virtual keyboard to display in portrait orientation.</string>
    <string name="preferences_landscapekb_title">Landscape keyboard</string>
    <string name="preferences_landscapekb_summary">Choose which virtual keyboard to display in landscape orientation.</string>
    <string name="font_picker_title">Font</string>
    <string name="font_import">Import…</string>
    <string name="font_exit">Exit</string>
    <string name="font_apply">Apply</string>
</resources>